// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly show a middle element 1`] = `
<span>
  <Tooltip>
    <a
      href="#"
      onClick={[Function]}
    >
      Foo
    </a>
  </Tooltip>
  <span
    className="slash-separator"
  />
</span>
`;

exports[`should show the last element without clickable link 1`] = `
<span>
  <Tooltip>
    <span>
      Foo
    </span>
  </Tooltip>
</span>
`;
